# bayesian_workflow

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: CONTRIBUTING.md
myapp/: lasso.py  spike_and_slab.py
notes/: 2_4_prior_predictive.ipynb  4_3_simulation.ipynb  ex_scaled_regression.ipynb  lasso.ipynb  lasso_numpyro.ipynb  spike_and_slab.ipynb  spike_and_slab_dirac.ipynb  spike_and_slab_dirac_continuous.ipynb  visualization.ipynb
