[tool.poetry]
name = "myapp"
version = "0.0.1"
description = ""
authors = ["Ryosuke Nagumo <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.21.0"
scipy = "^1.7.0"
pandas = "^1.2.5"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
jupyterlab = "^3.0.16"
numpyro = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.800"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = 'conftest.py|.venv'

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
